feat(harmony): land native-core product shell